fix: various fixes
Fix missing `$`, replace `\phi` with `\varphi` and fix some typos

--- a/teachings/cigol/ASKompaktheitssatz.mdx
+++ b/teachings/cigol/ASKompaktheitssatz.mdx
@@ -9,7 +9,7 @@ tags: [Kompaktheitssatz]
 
 ## Folgerungsbeziehung
 
-Eine Formelmenge ist erfüllt, wenn die Interpretation jede der Formeln $\phi \in \Phi$ erfüllt.
+Eine Formelmenge ist erfüllt, wenn die Interpretation jede der Formeln $\varphi \in \Phi$ erfüllt.
 
 Zudem folgt eine Formel aus der Formelmenge $\Phi \models \psi$, wenn jedes
 passende Modell von $\Phi$ auch Modell von $\psi$ ist. 
