--- a/teachings/cigol/Einführung_Aussagenlogik.mdx
+++ b/teachings/cigol/Einführung_Aussagenlogik.mdx
@@ -44,7 +44,7 @@ Also $\mathfrak{I}: \text{Var} \to \{0,1\}$.
 > Bsp. $\varphi = \lnot x_1 \lor x_2$.\
 >  Sei $\mathfrak{I}$ Interpretation. $\mathfrak{I}(x_1) = 1$ und $\mathfrak{I}(x_2) = 1$.
 
-Nun nehmen wir die Interpretation und wenden sie auf die Formel an.\
+Nun nehmen wir die Interpretation und wenden sie auf die Formel an.
 
 > $\mathfrak{I}(\varphi) = [\![ \varphi ]\!]^\mathfrak{I} = \max ((1-1), 1) = 1$
 
