--- a/teachings/cigol/Spieltheorie.mdx
+++ b/teachings/cigol/Spieltheorie.mdx
@@ -8,16 +8,16 @@ tags: [Auswertungsspiel]
 ---
 
 ## Auswertungsspiel
-Gegeben FO-Satz $\phi$ zur einfachheit in [Negationsnormalform](/cigol/teachings/Einführung_Prädikatenlogik) und Struktur $\mathfrak{A}$
+Gegeben FO-Satz $\varphi$ zur einfachheit in [Negationsnormalform](/cigol/teachings/Einführung_Prädikatenlogik) und Struktur $\mathfrak{A}$
 Es gibt:
 
 - Die Verifizierin V (ich glaub Geschlecht ist eigentlich egal) [Manchmal auch Spieler 0]: Möchte zeigen,
-dass $\mathfrak{A}$ Modell von $\phi$ ist.
+dass $\mathfrak{A}$ Modell von $\varphi$ ist.
 - Den Falsifizierer F [Spieler 1]: Möchte das Gegenteil
 
 ![Lets get ready to rumble meme](https://media.tenor.com/jlnEdGMDXhsAAAAd/bk113-ready-to-rumble.gif)
 
-Sei nun die Position $\psi(a)$, also am Anfang $\psi = \phi$
+Sei nun die Position $\psi(a)$, also am Anfang $\psi = \varphi$
 Nun gilt:
 
 - Falls $\psi$ ein Literal ist, dann gewinnt die Verifizierin, **falls**
