--- a/teachings/cigol/Axiomatisierbarkeit.mdx
+++ b/teachings/cigol/Axiomatisierbarkeit.mdx
@@ -20,12 +20,12 @@ behandelt **Klassen einfach so als ob sie Mengen sind**.
 
 Z.B. sei ($\tau$) die Klasse aller $\tau$ Strukturen.
 
-2. $Mod(\Phi)$ (**Modellklasse**): Beschreibt die Klasse die $\Phi$ beschreibt.
+2. $\text{Mod}(\Phi)$ (**Modellklasse**): Beschreibt die Klasse die $\Phi$ beschreibt.
 Also sie besteht aus allen $\tau$-Strukturen $\mathfrak{A}$ mit $\mathfrak{A} \models \Phi$
 Also noch simpler: Die Sammlung aus den $\tau$-Strukturen wo $\Phi$ unter allen
  Belegungen gilt.
 
-3. Eine Klasse $K$ wird von $\Phi$ **axiomatisiert**, wenn $K=Mod(\Phi)$ also relativ
+3. Eine Klasse $K$ wird von $\Phi$ **axiomatisiert**, wenn $K=\text{Mod}(\Phi)$ also relativ
 klar alle Strukturen in $K$ erfüllen $\Phi$ aber keine anderen.
 
 4. Eine Klasse $K$ ist **endlich/elementar axiomatisiert** wenn $\Phi$ endlich ist
@@ -33,12 +33,12 @@ klar alle Strukturen in $K$ erfüllen $\Phi$ aber keine anderen.
 All diese Sachen gelten ob Strukturen/Strukturklassen axiomatisierbar sind.
 Aber auch in einer Struktur können Teilmengen **(elementar) definiert** werden
 
-Eine Relation $R \subseteq A^r$ wird definert wenn eine Formel $\phi$ existiert
- mit $R=\phi^\mathfrak{A}$ (Hierbei ist zu erkennen, dass eine Formel $\phi(x_1, ..., x_r)$
- einige Tupel als Wahr (also in $\phi^\mathfrak{A}$) und manche als Falsch erkennt.
+Eine Relation $R \subseteq A^r$ wird definert wenn eine Formel $\varphi$ existiert
+ mit $R=\varphi^\mathfrak{A}$ (Hierbei ist zu erkennen, dass eine Formel $\varphi(x_1, ..., x_r)$
+ einige Tupel als Wahr (also in $\varphi^\mathfrak{A}$) und manche als Falsch erkennt.
 
-Dies gilt genauso für Konstanten $a \in A$, wenn eine Formel $\phi(x) \in FO(\tau)$
-existiert mit $\mathfrak(A) \models \phi(a)$ aber keine anderes $b \in A$
+Dies gilt genauso für Konstanten $a \in A$, wenn eine Formel $\varphi(x) \in FO(\tau)$
+existiert mit $\mathfrak(A) \models \varphi(a)$ aber kein anderes $b \in A$
 
 ## Isomorphie
 
@@ -46,7 +46,7 @@ Ohoh. Ich erkenne den Unterscheid nichtmehr. 😨
 
 ![isomorph](/teaching-assets/cigol/malo/assets/isomorph.png)
 
-Ok ja also. Zwei Sachen sind **isomorph** Wenn sie **außer Unbennung** nicht 
+Ok ja also. Zwei Sachen sind **isomorph** wenn sie **außer Unbennung** nicht 
 unterscheidbar sind. Also Formal: Es gibt einen Isomorphismus $\pi: A \to B$ so dass:
 
 - Jede Relation $(a_1, ..., a_r) \in R^\mathfrak{A}$ gdw. $(\pi a_1, ..., \pi a_r) \in R^\mathfrak{B}$
@@ -56,14 +56,14 @@ Kurzschreibweise für isomorphie: $\mathfrak{A} \cong \mathfrak{B}$.
 Ein Isomorphismus $\pi : \mathfrak{A} \overset{\sim}{\to} \mathfrak{A}$ heißt
 **Automorphismus** (wie Autobiographie und so)
 
-Eine Struktur heißt Starr, wenn alle Automorphismen $Aut(\mathfrak{A})$ nur die triviale
+Eine Struktur heißt Starr, wenn alle Automorphismen $\text{Aut}(\mathfrak{A})$ nur die triviale
 $1_\mathfrak{A}$ enthält.
 
 Und nun zu den wichtigen Sätzen:
 
-> **Isomorphielemma**: Sei $\pi$ Isomorphismus, dann gilt für alle $\phi(x_1, ..., x_n) \in FO(\tau)$
+> **Isomorphielemma**: Sei $\pi$ Isomorphismus, dann gilt für alle $\varphi(x_1, ..., x_n) \in FO(\tau)$
 > und alle $a_1, ..., a_n \in A$: <br/>
-> $\mathfrak{A} \models \phi(a_1, ..., a_n)$ gdw. $\mathfrak{B} \models \phi(\pi a_1, ..., \pi a_n)$
+> $\mathfrak{A} \models \varphi(a_1, ..., a_n)$ gdw. $\mathfrak{B} \models \varphi(\pi a_1, ..., \pi a_n)$
 
 Also lassen sich Isomorphe Strukturen nicht durch die Prädikatenlogik unterscheiden
 und somit sind Modellklassen unter Isomorphie abgeschlossen und wenn $\mathfrak{A} \cong \mathfrak{B}$
@@ -76,10 +76,10 @@ mit $T \models \psi$ (das ist die Folgerungsbeziehung [Wenn T gilt gilt auch psi
 
 Eine Theorie ist **vollständig** wenn entweder $\psi \in T$ oder $\lnot \psi \in T$ gilt.
 
-Die Theorie einer Struktur ($Th(\mathfrak{A} := \{\psi \mid \mathfrak{A} \models \psi\}$)) ist auch ziemlich ergibig.
-$Th(K)$ für Modellklassen ist analog definiert.
+Die Theorie einer Struktur ($\text{Th}(\mathfrak{A} := \{\psi \mid \mathfrak{A} \models \psi\}$)) ist auch ziemlich ergibig.
+$\text{Th}(K)$ für Modellklassen ist analog definiert.
 
-Hierbei ist hilfreich: Wenn $\Phi, K$ axiomatisiert, dann ist $Th(K) = \{\psi \mid \Phi \models \psi\}
+Hierbei ist hilfreich: Wenn $\Phi, K$ axiomatisiert, dann ist $\text{Th}(K) = \{\psi \mid \Phi \models \psi\}$
 
 > Jede Theorie lässt sich zu einer vollständigen erweitern
 
@@ -87,7 +87,7 @@ Hierbei ist hilfreich: Wenn $\Phi, K$ axiomatisiert, dann ist $Th(K) = \{\psi \m
 
 ### Elementare Äquivalenz
 
-Zwei Strukturen $\mathfrak{A}, \mathfrak{B}$ sind elementar äquivalent, wenn $Th(\mathfrak{A}) = Th{\mathfrak{B}}$ bzw. wenn für alle Sätze $\psi \in FO(\tau)$
+Zwei Strukturen $\mathfrak{A}, \mathfrak{B}$ sind elementar äquivalent, wenn $\text{Th}(\mathfrak{A}) = \text{Th}(\mathfrak{B})$ bzw. wenn für alle Sätze $\psi \in FO(\tau)$
 gilt:
 
 $\mathfrak{A} \models \psi$ gdw. $\mathfrak{B} \models \psi$
