--- a/teachings/cigol/Einführung_Prädikatenlogik.mdx
+++ b/teachings/cigol/Einführung_Prädikatenlogik.mdx
@@ -7,8 +7,6 @@ date: 17/08/2023
 tags: [Einführung Prädikatenlogik, Syntax, Semantik, Universen]
 ---
 
-!> Ich benutze $\phi$ statt $\varphi$ wegen schreibarbeit.
-
 ## Einführung in die Prädikatenlogik
 
 less goo weiter gehts in der Reise in die Mathematische Logik
@@ -63,8 +61,7 @@ Wir haben in **jeder** Struktur folgendes Grundalphabet:
 - den Relationen und Funktionssymbolen in der Signatur.
 
 
-Daraus kann man sich dann schön was zusammenbauen. Z.B. $\phi = \forall v_1 
-\exists v_2 (v_1 < v_3 \land \lnot(v_2 = v_3))
+Daraus kann man sich dann schön was zusammenbauen. Z.B. $\varphi = \forall v_1 \exists v_2 (v_1 < v_3 \land \lnot(v_2 = v_3))$
 
 Hierbei sind die Variablen $v_1, v_2$ an einen Quantor **gebunden** und 
 $v_3$ ist frei: Hießt würde man $\Phi$ aufrufen wollen, müsste man ein $v_3$ 
@@ -81,36 +78,36 @@ Ist eigentlich echt nicht kompliziert. Die Sachen machen halt das was sie immer
 schon gemacht haben. 
 
 **Folgerungen**: Fast gleich zu der Folgerungsbeziehung in der AL.
-Nur $\Phi_{Gruppe} \models \phi$ heißt also $\phi$ gilt in jeder Gruppe, aber
-$\phi$ kann freie Variablen haben, also gilt $\phi$ in jeder Gruppe mit jeder
-Möglichen Belegung der freien Variablen von $\phi$.
+Nur $\Phi_{\text{Gruppe}} \models \varphi$ heißt also $\varphi$ gilt in jeder Gruppe, aber
+$\varphi$ kann freie Variablen haben, also gilt $\varphi$ in jeder Gruppe mit jeder
+Möglichen Belegung der freien Variablen von $\varphi$.
 
 Hier muss aber nochmal erklärt werden was nun ein Model ist:
 
-Ein Modell von $\phi$ wäre ist eine Struktur mit der gleichen Signatur von $\phi$ 
+Ein Modell von $\varphi$ wäre ist eine Struktur mit der gleichen Signatur von $\varphi$ 
 und eine Belegung möglicher freier Variablen $\beta: X \to A$. Das ist dann eine 
 Interpretation $\mathfrak{I}=(\mathfrak{A}, \beta)$. Somit ist
- $[\phi]^\mathfrak{I} \in \{0,1\}$ entweder falsch oder wahr.
+ $[\varphi]^\mathfrak{I} \in \{0,1\}$ entweder falsch oder wahr.
 
 ## Normalformen
 Auch hier gibt es mal wieder praktische Normalformen. 
 
 - **Negationsnormalform**: Kein $\to$ und Negationen kommen nur bei atomaren Formeln
-(also nur bei z.B. $x\neqy$, $\lnot Rxy$, $\lnot fxy$)
-  - Hierfür gilt: $\lnot \forall x \phi = \exists x \lnot \phi$ und andersherum
+(also nur bei z.B. $x\neq y$, $\lnot Rxy$, $\lnot fxy$)
+  - Hierfür gilt: $\lnot \forall x \varphi = \exists x \lnot \varphi$ und andersherum
 - **Termreduzierte Normalform**: Nur noch atomare Formeln($Rx, fx=y, x=y$)
 - **Pränex-Normalform** PNF: Die Quantoren ganz am Anfang:
-  - Hierfür gilt: $\exists x(\phi \or \psi) \equiv \exists x \phi \lor \exists \psi$
-  - Und: $\forall x(\phi \land \psi) \equiv \forall x \phi \land \forall x \psi$
-  - Und: $\exists x \exists y \phi \equiv \exists y \exists x \phi$ genauso für 
+  - Hierfür gilt: $\exists x(\varphi \lor \psi) \equiv \exists x \varphi \lor \exists \psi$
+  - Und: $\forall x(\varphi \land \psi) \equiv \forall x \varphi \land \forall x \psi$
+  - Und: $\exists x \exists y \varphi \equiv \exists y \exists x \varphi$ genauso für 
     $\forall$. 
-  - Und falls $x \notin \psi$: $\psi \land \exists x \phi \equiv 
-    \exists x (\psi \land \phi)$ genauso für $\lor$ und für $\forall$
+  - Und falls $x \notin \psi$: $\psi \land \exists x \varphi \equiv 
+    \exists x (\psi \land \varphi)$ genauso für $\lor$ und für $\forall$
   - Das heißt wir müssen manchmal gebundene Variablen umbennen um in die PNF zu kommen
 - **Skolem Normalform** (ist nur **erfüllbarkeits-äquivlanent** heißt, das Modell 
-ist vermutlich nicht das gleiche aber $\phi'$ ist genau dann erfüllbar wenn $\phi$ das ist)
+ist vermutlich nicht das gleiche aber $\varphi'$ ist genau dann erfüllbar wenn $\varphi$ das ist)
   - Für jeden Satz $\psi \in FO(\sigma)$ gibt es ein Satz
-  $\phi \in FO(\tau \subseteq \sigma)$ mit der Form: $\forall y_1 ... \forall y_n \phi'$, $\phi'$ Quantorenfrei
+  $\varphi \in FO(\tau \subseteq \sigma)$ mit der Form: $\forall y_1 ... \forall y_n \varphi'$, $\varphi'$ Quantorenfrei
 
 
 ## Quantorenrang
