feat: started howtos

--- a/teachings/cigol/Axiomatisierbarkeit.mdx
+++ b/teachings/cigol/Axiomatisierbarkeit.mdx
@@ -83,7 +83,9 @@ Hierbei ist hilfreich: Wenn $\Phi, K$ axiomatisiert, dann ist $\text{Th}(K) = \{
 
 > Jede Theorie lässt sich zu einer vollständigen erweitern
 
-
+#### Wie kann ich sagen ob es eine Theorie ist oder nicht?
+Es müssen immmer alle Tautologien drin sein, da die ja aus allem folgen. Endliche Sachen sind also schonmal sus. Dann sucht man einfach nur noch eine
+Formel die nicht in der Menge drin ist aber auch wahr ist, wenn alle in der Menge war ist. 
 
 ### Elementare Äquivalenz
 
