feat: tldr malo

--- a/teachings/cigol/Wasdas.mdx
+++ b/teachings/cigol/Wasdas.mdx
@@ -28,4 +28,30 @@ Zu können sind folgende dinge:
 - elementare Definierbarkeit
 - Starrheit von Strukturen und iso(auto)morphismen
 
+## Formel erstellen
+
+gibts denke ich keinen Trick. Nur aufpassen das alle Eigenschaften kodiert sind. z.b. bei FO: $\exists x \exists y x = y$ ausschließen. Hierfür  oft ungefähr das Format $\exists x_1, ..., \exists x_n (\bigwedge_{1 \le i < j \le n} x_i \neq x_j)$ oder so
+
+## Definitionen auswendig lernen
+
+Hilft nur machen. Hilft auch bei den anderen Teilaufgaben
+
+## Funktionale Vollständigkeit
+
+Standard kram. $\neg, \lor$ beweisen. Es hilft manchmal $0,1$ irgendwie noch zu schaffen. 
+Gegenbeweis muss man argumentieren, dass es keine andere möglichkeit gibt.
+
+## Horn Formeln, Markierungsalg.
+
+Immer gut die Markierungen aufschreiben und von $1 \to x$ starten. Horn Formeln auf anzahl negationen aufpassen und auf $\lor, \land$.
+
+## Resolutionsalg.
+
+Syntaktisch einfach anwenden nicht nachdenken.
+
+## Seq.kalkül AL
+
+Alles noch easy. 
+
+## EF-Spiele
 
