--- a/teachings/psp/pspspspspsp.mdx
+++ b/teachings/psp/pspspspspsp.mdx
@@ -7,6 +7,21 @@ order: 2
 tags: [PSP, Versuch 0, ATmega 644]
 ---
 
+# Hilfreiche Tipps
+- Die Hiwis möchten meistens geduzt werden :)
+- Die Aufgaben können deutlich länger dauern als man denkt
+  - Frühzeitig anfangen!!!
+  - Auch wenn es 3 mal mit einem Tag Zeit geklappt hat, kann einem ein kleiner Bug die Abgabe versauen
+- Die Funktionen die laut Dokument zu implementieren sind bitte implementieren (Das wird kontrolliert (die Funktion darf nicht leer sein, darf aber noch bugs verursachen))
+- Die Gruppentermine dauern 3:30 Stunden
+  - Eure Nachbefragung findet statt, nachdem alle Testtasks abgenommen wurden
+  - Wenn die Nachbefragung bis $15$ minuten vor Ende nicht stattfand, gibt es einen Fehlversuch
+  - Wenn zu viele erst nach 3 Stunden für die nachbefragung fertig sind, können nicht alle Zeitlich nachbefragt werden
+  - $\Rightarrow$ Am besten schon mit fertigem Code zum Termin kommen
+- Die Nachbefragungen werden in der Reihenfolge gemacht in der ihr mit allen Testtasks fertig seit
+  - Wenn Team 1 zuerst alle fertig hat und dann Team 8, sind diese auch zuerst dran
+- Nach der Nachbefragung, dürft ihr erst gehen wenn ihr die Präsenzaufgaben fertig habt (oder nach Ablauf der Zeit)
+
 # Allgemein
 Der ATmega 644 (das ist der große Chip in der Mitte vom Board), kann über seine Ports verschiedene Sachen ansteuern.
 An welchen Ports die Geräte genau angeschlossen sind, kann der Tabelle ganz unten in den Versuchsdokumenten entnommen werden, jedoch sind das die häufigsten Anschlüsse.
