add(psp): start of versuch 1

--- a/teachings/psp/ichHabProbleme.mdx
+++ b/teachings/psp/ichHabProbleme.mdx
@@ -36,3 +36,6 @@ tags: [PSP, ATmega 644]
 # Versuch 2
 - Komisches Verhalten von Testtasks (Flackern, komische zeichen, delay geht nicht)
   - Die Scheduler-ISR hat eine lokale variable, die vor dem ändern des Stack pointers den Prozessstack überschreibt (*selten*)
+
+# Versuch 3
+- 
