--- a/teachings/cigol/malo/Modallogik.mdx
+++ b/teachings/cigol/malo/Modallogik.mdx
@@ -11,10 +11,10 @@ tags: [Modallogik, Bisimulation]
 
 Die Modallogik handelt von Transitionssystemen/Graphen.
 
-```mermaid
+{/*```mermaid
 flowchart LR
   u-->|a|v
-```
+``` */}
 
 Definition:
 - Alle aussagenlogischen Formeln mit Aussagenvars. $P_i$ sind in ML.
