--- a/teachings/sibd/dbis/Anfrageoptimierung.mdx
+++ b/teachings/sibd/dbis/Anfrageoptimierung.mdx
@@ -16,11 +16,11 @@ Könnte hilfreich sein um ein Moodle Desaster zu vermeiden.
 
 Eine Anfrage wird wie folgt bearbeitet:
 
-```mermaid
+{/*```mermaid
 flowchart TD
     A[Scanner / Parser] --> B[Anfrageoptimierung]
     B[Anfragenoptimierung] --> C[Anfrageausführung]
-```
+```*/}
 
 Dabei gibt es 3 Arten von Optimierungen:
 
