fix: update panikzettel

--- a/src/app/updates/page.mdx
+++ b/src/app/updates/page.mdx
@@ -12,30 +12,19 @@ export const metadata = {
 
 <div className="markdown">
 
-## DBIS
+## Panikzettel
 
-Zu DBIS habe ich noch keine Ahnung. Am besten irgendwas Unterhaltsames dbis ist sonst so elendig langweilig.
+Da wir ja zwei neue Pflichtmodule dieses Semester haben, wollte ich einfach mal neue Panikzettel für die schreiben. 
+Das hilft zwar uns noch nicht so, aber vielleicht die nach uns.
 
-Das Fach gibt eigentlich genug her mit der **Shitshow** die diese Abgabenkorrekturen waren.
+Das Problem ist nu... der Herrn Philipp Schröder ist vermutlich nichtmehr an der RWTH und hat deswegen auch keinen Zugriff mehr aufs [gitlab](https://git.rwth-aachen.de/philipp.schroer/panikzettel).
+Auf meine E-Mail hat er auch nicht geantwortet (es gibt auch 5 offene merge requests seit 2 Jahren).
 
-## MALO
+Deswegen habe ich kurzerhand das Projekt [geforked](https://git.rwth-aachen.de/jonas.max.schneider/panikzettel) und es mit ci/cd in htwr eingebunden.
 
-MALO content wird im Kindheitsbücher Stil gemacht. Ich hoffe ich finde dazu nach stocha schon ein bisschen Zeit.
+- [https://htwr-aachen.de/panikzettel](https://htwr-aachen.de/panikzettel)
+- bzw. bald auch [panikzettel.htwr-aachen.de](https://panikzettel.htwr-aachen.de)
 
-<br />
-## Zum Thema Unterstützung
-
-Ich werde versuchen es leichter zu machen selber Sachen zu schreiben, zu korrigieren etc.
-
-Für Fächer, die jetzt schon da sind also MALO, STOCHA, DATCOM, BUK, SWT ist es ziemlich einfach an den Zusammenfassungen zu arbeiten.
-Es gibt im [git repo](https://github.com/jonsch318/htwr-aachen.de) einen Ordner `/teachings`. Hier sind die Sachen in Institute geordnet.
-Ein neue Datei wird direkt erkannt und auf der Seite angezeigt.
-
-Die Schreibweise ist einfach Markdown. Es gibt Cheat Sheets im [Internet](https://www.markdownguide.org/cheat-sheet/).
-Das allermeiste wird unterstützt.
-
-Ein Update kann dann einfach über ein Pull Request gemacht werden.
-Also Forken, Änderungen machen und dann einen Pull Request machen oder Branch machen und dann Pull Request. Muss leider so laufen sonst wird hier scheiße hochgeladen.
 
 </div>
 </Main>
