--- a/src/app/updates/page.mdx
+++ b/src/app/updates/page.mdx
@@ -12,12 +12,12 @@ export const metadata = {
 
 <div className="markdown">
 
-## Panikzettel
+## Das sieht gar nicht gut aus (Panikzettel)
 
 Da wir ja zwei neue Pflichtmodule dieses Semester haben, wollte ich einfach mal neue Panikzettel für die schreiben. 
 Das hilft zwar uns noch nicht so, aber vielleicht die nach uns.
 
-Das Problem ist nu... der Herrn Philipp Schröder ist vermutlich nichtmehr an der RWTH und hat deswegen auch keinen Zugriff mehr aufs [gitlab](https://git.rwth-aachen.de/philipp.schroer/panikzettel).
+Das Problem ist nur... der Herr Philipp Schröder ist vermutlich nichtmehr an der RWTH und hat deswegen auch keinen Zugriff mehr aufs [gitlab](https://git.rwth-aachen.de/philipp.schroer/panikzettel).
 Auf meine E-Mail hat er auch nicht geantwortet (es gibt auch 5 offene merge requests seit 2 Jahren).
 
 Deswegen habe ich kurzerhand das Projekt [geforked](https://git.rwth-aachen.de/jonas.max.schneider/panikzettel) und es mit ci/cd in htwr eingebunden.
@@ -25,6 +25,7 @@ Deswegen habe ich kurzerhand das Projekt [geforked](https://git.rwth-aachen.de/j
 - [https://htwr-aachen.de/panikzettel](https://htwr-aachen.de/panikzettel)
 - bzw. bald auch [panikzettel.htwr-aachen.de](https://panikzettel.htwr-aachen.de)
 
+Alle, die die Panikzettel gut finden, können helfen. Es ist wie immer jeder Pull Request willkommen, jedoch ist bei den Panikzettel die Qualität natürlich anders / wichtiger.
 
 </div>
 </Main>
