--- a/teachings/scil/buk/Das-mir-zu-komplex.mdx
+++ b/teachings/scil/buk/Das-mir-zu-komplex.mdx
@@ -91,3 +91,7 @@ Immer wenn ihr allgemein Beweisen sollt, dass zum Beispiel $L_1, L_2 \in$ NP unt
 Fertig, es ist polynomiell, da beide Zertifikate und beide Verifizierer polynomiell sind und die Korrektheit folgt aus den beiden Verifizierer.
 
 </Spoiler>
+
+## Spass Spaß Spas
+
+<RossmanithQuiz></RossmanithQuiz>
