--- a/teachings/scil/buk/Wichtige-Probleme.mdx
+++ b/teachings/scil/buk/Wichtige-Probleme.mdx
@@ -117,3 +117,8 @@ DHC ist genau das gleiche nur mit einem gerichteten Graphen.
 ?> Das auswählen passender Probleme ist eure Sache...
 
 Viel Glück.
+
+
+## Spass Spaß Spas
+
+<RossmanithQuiz></RossmanithQuiz>
