feat: added ihre zusammenfassung ad
ich kann nicht panikzettel & zusammenfassungen gleichzeitig schreiben. Ich kann es empfehlen zusammenfassungen zu schreiben, ist leicht mit mdx und ganz witzig

--- a/teachings/cesti/itsec/test.mdx
+++ b/teachings/cesti/itsec/test.mdx
@@ -1,8 +1,11 @@
 ---
-title: Test
+title: Hier könnte ihre Zusammenfassung stehen
 order: 1
-description: Toller Test
+description: Brauche Hilfe ganz dringend
 author: Jonas Schneider
-date: 08/02/2024
-tags: [Test]
+date: 21/02/2024
+tags: [High Performer]
 ---
+
+![Hier könnte Ihre Zusammenfassung stehen!](/assets/other/ihre-zusammenfassung.png)
+
