--- a/src/app/updates/page.mdx
+++ b/src/app/updates/page.mdx
@@ -1,6 +1,5 @@
 import Main from "@/layouts/Main";
 import { HeadLine } from "@/components/rwth/headline";
-import SharedCounter from "@/components/SharedCounter"
 
 export const metadata = {
   title: "Neuigkeiten von HTWR",
@@ -11,18 +10,20 @@ export const metadata = {
 
 <HeadLine>Updates</HeadLine>
 
-<div className="markdown">
+<div className="markdown text-xl">
 
     # HTWR goes (semi) legal
     
-    Mir ist bewusst, HTWR ist so eine Grauzone (sehr grau :/) mit Folien, (keine Klausuren natürlich 🫣) und anderem
-    was schwierig ist zu veröffentlichen. Was wir/(ich mach die Webseite immernoch größtenteils Alleine :/) in Zukunft machen ist unten Beschrieben.
+    HTWR ist eine Grauzone (sehr dunkel grau :/) mit Folien, (keine Klausuren natürlich 🫣)... 
+    Was wir/(ich mach die Webseite immernoch größtenteils alleine :/) in Zukunft machen ist unten beschrieben.
+
+    Aber erstmal ein kleiner Rant
 
     ## **Das sollte nicht so sein**
 
-    > Ich finde es einfach unfair Altklausuren als Lehrstuhl nicht zu veröffentlich, auch wenn hilft für Aufgaben Wiederholungen. Warum?:
+    > Ich finde es einfach unfair Altklausuren als Lehrstuhl nicht zu veröffentlich, obwohl es praktisch ist Aufgaben zu wiederholen. Warum?
      
-    Es ist so das Altklausuren (selbst mit Gedächtnissprotokollen) eine erhebliche Hilfe und schlichtweg die beste Klausurvorbereitung ist **Punkt**.
+    Es ist so, dass Altklausuren (selbst Gedächtnissprotokollen) eine erhebliche Hilfe und schlichtweg die beste Klausurvorbereitungen sind **Punkt**.
     Ich glaube den Fakt zweifelt niemand an.
 
     Auch das immer Altklausuren gesammelt und verteilt werden lässt sich nicht ganz verhindern.
@@ -35,7 +36,6 @@ export const metadata = {
     Warum so wenige Klausuren von den Lehrstühlen veröffentlicht werden:
       1. Natürlich sind Klausuren viel Arbeit und Aufgaben zu wiederholen, direkt oder in abgewandelter Form ist dann natürlich simpler.
           
-        !> Sollen wir uns Aufgaben ausdenken oder wie?
     
       2. Lernt den Inhalt nicht die Übung.
         ![Ja aber Nein](https://media.tenor.com/CnV-C65z7iMAAAAi/theoretically-no.gif)
@@ -44,11 +44,11 @@ export const metadata = {
           
           _Learning by Doing_. 
 
-          Außerdem in der Klausur wird ja auch nicht das Wissen an sich abgefragt, sondern in einer bestimmten Form (anhand der Übungen, Schemaaufgaben, etc.).
+          Außerdem in der Klausur wird ja auch nicht das pure Wissen an sich abgefragt, sondern in einer bestimmten Form (anhand der Übungen, Schemaaufgaben, etc.).
           Es ergibt also schon Sinn diese zu Lernen um eine gute Klausur zu schreiben.
           
-          Niemand kann sich 1850 Seiten MaLe Folien auswendig und kann danach den InductiveMiner perfekt anwenden.
-          Hierfür braucht es Übung. 
+          Niemand kann 1850 Seiten MaLe Folien auswendig und kann danach den InductiveMiner perfekt anwenden.
+          Hierfür braucht es Übung und eine Aufgabe auf dem Übungsblatt ohne Trickfragen reicht halt meistens nicht aus.
           
     ## Fachschaft!
     
@@ -58,29 +58,34 @@ export const metadata = {
 
     ## Was machen wir jetzt
 
-    Ich habe keine Lust mehr im Impressum einer hmm _kritischen_ Webseite zu stehen. Ich möchte Legal, oder zumindest Argumentierbar legal werden.
+    Ich habe keine Lust mehr im Impressum einer ähmm _kritischen_ Webseite zu stehen. Ich möchte legal, oder zumindest grauzonen legal werden.
 
-    > Noch habe ich keine Unterlassungserklärung bekommen, aber das soll so bleiben. Ich habe gerade nur den Vorteil nicht kommerziell zu arbeiten.
+    > Noch habe ich keine Unterlassungserklärung bekommen, aber das soll so bleiben. Ich habe aktuell nur den Vorteil nicht kommerziell zu arbeiten (das soll auch so bleiben).
     > Ich habe deswegen bereits die Klausurserver momentan abgeschaltet
 
-    Ich werde ein HTWR-Gedächtnissprotokolltemplate (`typst`, `latex`, `docx`, `odt`) erstellen. Das sollte gut genug aussehen, aber die genauen Formate der Klausuren sind ja eh egal.
+    Ich werde ein HTWR-Gedächtnissprotokolltemplate (`typst`, `latex`, `docx`, `odt`) erstellen. Das sollte gut genug aussehen, aber die genauen Formate der Klausuren sind ja eh egal
+    (das `typst` template ist bereits fast fertig im [exams repo](https://github.com/htwr-aachen/exams)).
 
     Dann wird systematisch jede Klausur / ob schlechtes Gedächtnissprotokoll oder echte Altklausur in dieses Format übertragen und *variert*.
-    Wir werden nicht grob abkopieren, aber die Zahlen sollen weiterhin stimmen.
+    Wir werden nicht blank abkopieren, aber die Zahlen sollen weiterhin stimmen.
 
-    Das ist mehr Aufwand. Ich werde hierfür bald ein Tool schreiben (bzw. eine Seite auf htwr) um dies Vereinfacht zu machen.
+    Das ist mehr Aufwand. Aber es wird sich lohnen. Nicht für umbedingt uns aber für spätere.
 
-    ## Es wäre sogar möglich die einzelne Aufgaben zu trennen und somit 
 
-    ## BITTE HELFT Mir
-    Ihr könnt mich einfach auf [mitmachen@htwr-aachen.de](mailto:mitmachen@htwr-aachen.de)
-    schreiben ich sage, dann was und wie ihr mithelfen könnt.
+    ## *BITTE HELFT Mir*
 
-    Bald kommt das Template und einfach loslegen eine Klausur / oder neue Klausuren zu protokollieren.
+    Fragt gerne bei [mitmachen@htwr-aachen.de](mailto:mitmachen@htwr-aachen.de)
+    nach. Ich sage euch, dann was und wie ihr mithelfen könnt.
+
+    Zum Beispiel einfach loslegen eine Klausur / oder ein neue Klausuren protokollieren.
 
     ## Apropro 
-    Gleichzeitig zu diesem Blog, werde ich die erste so richtige Dokumentation von HTWR hochladen.
+    Gleichzeitig zu diesem Blog, werde ich die erste so richtige Dokumentation von HTWR anfangen.
 
-    <SharedCounter name="counter-blog-upvote"/>
+    Ich werde vieles auf der Webseite ein bisschen umstrukturieren und neu designen. 
+    Neue Features sind *immer* willkommen, Memepages, Stickersammlung, Catbots, etc...
+
+    Ihr müsst nur ein bisschen Mut mitbringen um neue Dinge (React, Typescript) zu lernen.
+    
 </div>
 </Main>
