prog: nav branding

--- a/src/app/updates/page.mdx
+++ b/src/app/updates/page.mdx
@@ -1,6 +1,8 @@
 import Main from "@/layouts/Main";
 import { HeadLine } from "@/components/rwth/headline";
 
+import "../../styles/simple.scss"
+
 export const metadata = {
   title: "Neuigkeiten von HTWR",
   description: "HTWR Blog zu aktuellen Themen und Hilfe gesuchen" 
@@ -10,7 +12,7 @@ export const metadata = {
 
 <HeadLine>Updates</HeadLine>
 
-<div className="markdown text-xl">
+<div className="prose prose-neutral lg:prose-lg">
 
     # HTWR goes (semi) legal
     
