--- a/summaries/deddebme/psp/ErsterVersuch.mdx
+++ b/summaries/deddebme/psp/ErsterVersuch.mdx
@@ -37,4 +37,4 @@ Hier wird die Binäresuche genutzt. Macht euch zu nutze das wir hier mit Bits ar
 Das ist das größere grüne Board das ihr auf eurer PSP-Board stecken könnt. Zu Versuch 1 sollte das an jedem Platz oben liegen.
 
 ## Wie passen da die anderen Kabel denn noch drauf?
-They don't. Du brauchst für den SAR und Tracking Wandler alleine nur das ADDA-Board
+They don't. Du brauchst für den SAR und Tracking Wandler alleine nur das ADDA-Board. Das steckst du auf die richtigen Pins auf das PSP-Board.
