Richtiges update Date

--- a/summaries/deddebme/psp/ErsterVersuch.mdx
+++ b/summaries/deddebme/psp/ErsterVersuch.mdx
@@ -2,7 +2,7 @@
 title: Der erste Versuch
 description: Wie macht man das?
 author: Nils Eisenach, Adrian Schmitz
-date: 05/12/2023, 20/06/2024
+date: 20/06/2024
 order: 3
 tags: [PSP, Versuch 1, ATmega 644, ADDA, DAW, DAC]
 ---
