--- a/summaries/deddebme/psp/ichHabProbleme.mdx
+++ b/summaries/deddebme/psp/ichHabProbleme.mdx
@@ -2,7 +2,7 @@
 title: Warum will der Code nicht 😞
 description: Häufige Probleme
 author: Nils Eisenach, Adrian Schmitz
-date: 03/12/2023, 20/06/2024
+date: 20/06/2024
 order: 1
 tags: [PSP, ATmega 644]
 ---
